--- a/TODO.txt
+++ b/TODO.txt
@@ -1,22 +1,43 @@
   "MODULARISATION"
 
-  * Finish picking up the rubble and make things work. This includes:
-    - Automatic definition of stores via a hotplate call (make module)
-    - Make things work again
+   * Add function to add fields that will be logged by the logger, defining them as "indexes" or not. (This will be used to
+     make up the schema on the spot by the mongologger)
+   * Add ability to register a module later (change the load function so that it calls register, and then
+     make sure that the template is recalculated after the registration for that particular module so that
+     JS and CSSes are added). Also, see if it's possible to make file loading work as well (!), this will require
+     one middleware call per module). This way, people can use *any* module to integrate with hotplate -- they just need
+     to provide the right hooks
+   * Add functions to hotplate.use() routes allowing definition of stores at the same time (add stores use existing function)
+   * write a baseDojoStore module which just creates stores on the client side. This is urgent, as otherwise absolutely nothing
+     I wrote will work (!)
+   * Get all of the existing code fixed up so that if fits the new system
+   * See if it's feasible/possible to split the login code so that it becomes widget/db agnostic, maybe integrating with Passport
 
-  "ROLES"
+   "VANITY"
 
-  * Write a permission module (separate to "users"?), 100% inspired to Drupal
-  * Write a system where each "admin" can assign specific permissions (taken from modules) to users, and a function for a module to check
-    if that user has a specific permission
-  * Write that function client-side as well (will need to create a permission matrix javascript-side)
+   * Add counter again: cat `find . -type f | grep -v \.git | grep -v \.sw ` | wc
+
+  "PERMISSIONS"
+
+  * Write a permission system Ways to go about this:
+     - Hook to define roles (each module can define some)
+     - Hooks to define permission lists for each module
+     - Hooks to return, for each role, an associative array of module-defined permissions to which the role has access AND
+       function to return all module-defined permissions for a specified role. NOTE: initially, this could well be a static
+       module, which will define both roles and module-defined permissions for that role. However, hopefully in the future there
+       might well be a user interface to do that too
+     - Export the permission matrix to Javascript (for that particular user). Permissions are basically another variable (like "stores"
+       and "vars"). It's up to the framework to use it. Since this is _very_ widget-agnostic, ideally there will be a javascript
+       function defined which will return permissions on the client-side (no widgets etc.). THIS MIGHT WELL MEAN that I will need
+       a widget-agnostic topic/subscription system similar to what I did for the server.
 
   "HOOKS"
 
-  * Write a topic/publish system, server and client side, where things can happen
-  * Write a hook system, server and client side, where other modules can listen and "enrich" each other's objects, forms, etc.
-  * See if it's feasible for a module to modify another module's Mongoose model, or maybe have a specified field?
-  * Write a system where a module can change query objects that are run by another widget. This could be basically automatic
+  * Write a topic/publish system, client side, where clients can change other client's forms, templates etc. before they get
+    sent to the client. For example, another mixin to _templatedMixin which calls hotplate's hooks?
+  * See if it's feasible for a module to modify another module's Mongoose model, or maybe have a specified field? Or maybe something
+    else. Maybe hook mongoose's events with hooks? Do something so that each module 'knows' what mongoose data other modules
+    dea with.
 
   "LAST TOUCHES"
 
@@ -40,6 +61,8 @@
 
   "SETTINGS" (module)
 
+  * Think about for a moment if we need a good way to allow modules to have "settings". Probably not, as this could well become
+    _extremely_ complicated if we are to keep database and widget agnostic. 
   * Write basic "User settings" screen where people can update their info (Name, Photo, others).
   * Add a link to the user profile in the workspace picker if a user logs in without ANY workspaces
   * Write basic "settings" screen with sub-tabs where people can set things for their workspace. Decide on a few, generic, basic settings
@@ -191,3 +214,5 @@
   * Create system so that modules have a public directory
   * Make sure that the application runs some init() method javascript-side as well, so that modules can add their widgets to the app
   * Empty root directory completely (including errors.js etc.), turn it into a straight Express server with modules
+  * Write a hook system, server and client side, where other modules can listen and "enrich" each other's objects, forms, etc.
+  * Write a topic/publish system, server side, where things can happen
