--- a/TODO.txt
+++ b/TODO.txt
@@ -1,26 +1,9 @@
 
   "MODULARISATION" (ACTUAL TODO)
 
-  * Check existing hotDojoAuth code for workspaceIdValue (and anythingValue really) to see if I need to set some variables
-    at login/pick (check original jade files)
-  * Change workspaceIdValue into the newly created local variable in the app.
-  * See if the bloody thing actually works!
- 
-
    * Make application work "as is" (making it use the new hotDojoError and stores etc. )
-   ROUTES:
-     * Add function to add per-module routes
-     * Add functions to hotplate.use() routes allowing definition of stores at the same time (add stores use existing function)
-
-   * Move hotplate's defined stuff into its own namespace?
-   * 
-
-   * Move the "auth" side of the story into core in the sanest possible way for hotplate
-     * Add function to add per-module routes that only work on authentication with session or API token
-   * Check that coreAuth can be used for other systems (like passport, for example)
    * Add function to log to console if turned on (add it to logger), put log messages using that from now on
    * Comment each function, client and server, decide on a standard (probably node's)
-
 
    "VANITY"
 
@@ -95,6 +78,13 @@
             which allows them to register a new user (if available, etc.) or link the workspace to their existing user. Good chance to
             write a bit of a wizard.
   * CLIENT: Write a "message browser" system for the workspace admin so that they can see exactly what was sent, when, and see the logs
+
+  LATER MAYBE:
+
+   * Move hotplate's defined stuff (`vars`, etc.) into its own namespace?
+   * Check that coreAuth can be used for other systems (like passport, for example)
+   * Add function to add per-module routes
+   * MAYBE Add functions to hotplate.use() routes allowing definition of stores at the same time (add stores use existing function)
 
                           ----------------------------
                           !!  HOTPLATE IS FINISHED  !!
